# keystone-2026

./: BRAND_ASSET_GUIDE.md  Marina-Keystone-Opportunity-EN.docx  Marina-Keystone-Opportunity-EN.md  Marina-Keystone-Opportunity.docx  Marina-Keystone-Opportunity.md  README.md  competitor-intel-report.md  keystone-master-plan-2026.md
audit-system/: .gitignore  README.md  audit.py  generate.py  split.py
bots/: fb_poster.py  followup_scheduler.js  wa_bot_marina.js
data/: IELTS_Partners_Tier2.csv  Korea_IEQAS_Certified_Universities_BD_Agency.xlsx  Korea_Master_University_List.xlsx  Korea_Regional_EVisa_Universities.xlsx  Korea_University_Database_Keystone_Updated.xlsx  (+1 more)
marina-offer-en/: mkdocs.yml
voice-agent/: .env.example  .gitignore  ARCHITECTURE.md  OPERATIONS.md  README.md  TESTING.md  VOICE_CLONING.md  pyproject.toml  requirements.txt
voice-agent/dashboard/: index.html
voice-agent/keystone_voice/: __init__.py  agent.py  app.py  audio.py  bn.py  cli.py  config.py  console_sim.py  db.py  export.py  notify.py  pregen.py  scheduler.py  session.py  telephony.py  vad.py
voice-agent/keystone_voice/brain/: __init__.py  persona.py  state_machine.py  tools.py
voice-agent/keystone_voice/llm/: __init__.py  mock.py
voice-agent/keystone_voice/stt/: __init__.py  groq_whisper.py  mock.py  sarvam.py
voice-agent/keystone_voice/tts/: __init__.py  mock.py  sarvam_bulbul.py
voice-agent/scripts/: smoke.py
voice-agent/tests/: conftest.py  test_agent.py  test_audio.py  test_bn.py  test_db.py  test_scheduler.py  test_session_pipeline.py  test_state_machine.py  test_vad.py
(+141 files in other folders)
